--- a/src/Container.css
+++ b/src/Container.css
@@ -1,15 +1,22 @@
 .wrapper {
     display: grid;
     grid-template-rows: 300px 600px;
+    grid-template-columns: 400px 800px;
 }
 
 .maincanvas{
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row: 2/3;
+    grid-column: 2/3;
     z-index: 10;
 }
 .fouriertop{
     z-index: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row: 1/3;
+    grid-column: 2/3;
+}
+
+.fourierleft{
+    z-index: 2;
+    grid-row: 2/3;
+    grid-column: 1/3;
 }
