--- a/src/Container.css
+++ b/src/Container.css
@@ -1,27 +1,27 @@
 .wrapper {
     display: grid;
-    grid-template-rows: 200px 400px;
-    grid-template-columns: 200px 600px;
+    grid-template-rows: 125px 500px;
+    grid-template-columns: 400px 800px;
 }
 
-.maincanvas{
+.bottom-right{
     grid-row: 2/3;
     grid-column: 2/3;
     z-index: 10;
 }
-.fouriertop{
+.top-right{
     z-index: 2;
     grid-row: 1/3;
     grid-column: 2/3;
 }
 
-.fourierleft{
+.bottom-left{
     z-index: 2;
     grid-row: 2/3;
     grid-column: 1/3;
 }
 
-.topleft{
+.top-left{
     z-index: 2;
     grid-row: 1/2;
     grid-column: 1/2;
