--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,12 @@
 .wrapper {
     display: grid;
     grid-template-rows: 125px 500px;
-    grid-template-columns: 400px 800px;
+    grid-template-columns: 400px 900px;
 }
 
-.bottom-right{
-    grid-row: 2/3;
-    grid-column: 2/3;
-    z-index: 10;
+.bottom {
+    grid-row: 2/3
 }
-.top-right{
-    z-index: 2;
-    grid-row: 1/3;
-    grid-column: 2/3;
-}
-
-.bottom-left{
-    z-index: 2;
-    grid-row: 2/3;
-    grid-column: 1/3;
-}
-
-.top-left{
-    z-index: 2;
-    grid-row: 1/2;
-    grid-column: 1/2;
+.right {
+    grid-column: 2/3
 }
