--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,23 @@
-.wrapper {
+
+.wrapper{
+    display: flex;
+    justify-Content: center;
+    align-items: center;
+    flex-Direction:column;
+}
+
+.center{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.grid{
     display: grid;
-    grid-template-rows: 125px 500px;
-    grid-template-columns: 400px 900px;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
 }
 
-.bottom {
-    grid-row: 2/3
-}
-.right {
-    grid-column: 2/3
-}
-
-.above{
+.top{
     z-index: 20;
 }
-button{
-    grid-row: 1/2;
-    grid-column: 1/2;
-}
+
