--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
+*{
+    box-sizing: border-box;
+    max-width: 100%;
+    max-height: 100%;
+}
 
 .wrapper{
     display: flex;
     justify-Content: center;
     align-items: center;
     flex-Direction:column;
+    margin:0;
 }
 
 .center{
